made blogList graphQL endpoints

--- a/src/content/blogs/blog1.mdx
+++ b/src/content/blogs/blog1.mdx
@@ -1,4 +1,8 @@
 # Blog 1
 export const metadata = {
-  authors: ["Graham"]
+  title: 'Blog 1',
+  imageLink: 'blog 1 image',
+  authors: ["Graham"],
+  pubDate: '01-01-2021',
+  blurb: 'Describe Blog 1',
 }
