--- a/src/content/blogs/blog2.mdx
+++ b/src/content/blogs/blog2.mdx
@@ -1,1 +1,8 @@
 # Blog 2
+export const metadata = {
+  title: 'Blog 2',
+  imageLink: 'blog 2 image',
+  authors: ["Graham"],
+  pubDate: '01-01-2021',
+  blurb: 'Describe Blog 2',
+}
