update blog components to get data from query and load a dynamic number of tiles based on the number of blogs

--- a/src/content/blogs/blog2.mdx
+++ b/src/content/blogs/blog2.mdx
@@ -2,7 +2,7 @@
 export const metadata = {
   title: 'Blog 2',
   imageLink: 'blog 2 image',
-  authors: ["Graham"],
+  authors: ["Graham Houser"],
   pubDate: '01-01-2021',
-  blurb: 'Describe Blog 2',
+  desc: 'Describe Blog 2',
 }
