--- a/src/content/blogs/blog1.mdx
+++ b/src/content/blogs/blog1.mdx
@@ -2,7 +2,7 @@
 export const metadata = {
   title: 'Blog 1',
   imageLink: 'blog 1 image',
-  authors: ["Graham"],
+  authors: ["Graham Houser"],
   pubDate: '01-01-2021',
-  blurb: 'Describe Blog 1',
+  desc: 'Describe Blog 1',
 }
