Updated numerous components to use chakra + MDX. Added MDXComponents object to theme.js. Completed about page Removed unneeded routes and components Removed unneeded pages Created tools page and route Removed markdown-loader (all MDX going forward)

--- a/src/content/blogs/blog2.mdx
+++ b/src/content/blogs/blog2.mdx
@@ -1,8 +1,8 @@
 # Blog 2
 export const metadata = {
   title: 'Blog 2',
-  imageLink: 'blog 2 image',
+  imageLink: 'dice.jpg',
   authors: ["Graham Houser"],
   pubDate: '01-01-2021',
-  desc: 'Describe Blog 2',
+  desc: 'Describe blog 2',
 }
