--- a/src/content/blogs/blog3.mdx
+++ b/src/content/blogs/blog3.mdx
@@ -1,8 +1,8 @@
-# Blog 1
+# Blog 2
 export const metadata = {
-  title: 'Blog 1',
-  imageLink: 'cards.jpg',
+  title: 'Blog 3',
+  imageLink: 'palet.jpg',
   authors: ["Graham Houser"],
   pubDate: '01-01-2021',
-  desc: 'Describe Blog 1',
+  desc: 'Describe blog 3.',
 }
