--- a/src/content/filler.mdx
+++ b/src/content/filler.mdx
@@ -1,12 +1,3 @@
-import { Box } from '@chakra-ui/core';
+# Page Not Yet Implemented
 
-export const ChakraBox = () => (
-  <Box bg="earth.100" h="100px"/>
-)
-
-<ChakraBox />
-
-# Hello, world!
-
-This is **markdown** with <span style={{color: "red"}}>JSX</span>: MDX!
-<ChakraBox />
+I'm working on it, give it time
