updated blog tiles to link to blog page

--- a/src/content/blogs/blog1.mdx
+++ b/src/content/blogs/blog1.mdx
@@ -1,6 +1,7 @@
 # Blog 1
 export const metadata = {
   title: 'Blog 1',
+  fileName:'blog1',
   imageLink: 'cards.jpg',
   authors: ["Graham Houser"],
   pubDate: '01-01-2021',
