--- a/src/content/blogs/blog3.mdx
+++ b/src/content/blogs/blog3.mdx
@@ -1,6 +1,7 @@
 # Blog 2
 export const metadata = {
   title: 'Blog 3',
+  fileName:'blog3',
   imageLink: 'palet.jpg',
   authors: ["Graham Houser"],
   pubDate: '01-01-2021',
