--- a/src/content/blogs/test.mdx
+++ b/src/content/blogs/test.mdx
@@ -246,6 +246,7 @@ It converts "HTML", but keep intact partial entries like "xxxHTMLyyy" and so on.
 
 export const metadata = {
   title: 'Blog Test',
+  fileName:'test',
   imageLink: 'cards.jpg',
   authors: ["Graham Houser"],
   pubDate: '01-01-2021',
