--- a/src/content/blogs/blog2.mdx
+++ b/src/content/blogs/blog2.mdx
@@ -1,6 +1,7 @@
 # Blog 2
 export const metadata = {
   title: 'Blog 2',
+  fileName:'blog2',
   imageLink: 'dice.jpg',
   authors: ["Graham Houser"],
   pubDate: '01-01-2021',
