--- a/src/content/docs/creating-dynamic-pages.mdx
+++ b/src/content/docs/creating-dynamic-pages.mdx
@@ -1,1 +1,10 @@
 Discuss making one page that loads content by request, rather than many static pages.
+
+export const metadata = {
+  title: 'Creating Dynamic Pages',
+  fileName:'creating-dynamic-pages',
+  imageLink: '',
+  authors: ["Graham Houser"],
+  pubDate: '01-28-2022',
+  desc: 'Guide for creating pages dynamically without static coded routes.',
+}
