--- a/src/content/docs/testing.mdx
+++ b/src/content/docs/testing.mdx
@@ -1,6 +1,6 @@
-## Testing your application
+# Testing your application
 
-### Used libraries
+## Used libraries
 
 RSK comes with the following libraries for testing purposes:
 
@@ -12,11 +12,9 @@ You may also want to take a look at the following related packages:
 - [jsdom](https://github.com/tmpvar/jsdom)
 - [react-addons-test-utils](https://www.npmjs.com/package/react-addons-test-utils)
 
-### Running tests
+## Running tests
 
-To test your application simply run the
-[`yarn test`](https://github.com/kriasoft/react-starter-kit/blob/9014614edcb2f44b23298ca3287b9af3a14b6076/package.json#L152)
-command which will:
+To test your application simply run `yarn test` which will:
 
 - recursively find all files ending with `.test.js` in your `src/` directory
 
@@ -24,18 +22,17 @@ command which will:
 yarn test
 ```
 
-### Conventions
+## Conventions
 
 - test filenames MUST end with `test.js` or `yarn test` will not be able to
   detect them
 - test filenames SHOULD be named after the related component (e.g. create
   `Login.test.js` for `Login.js` component)
 
-### Basic example
-
-To help you on your way RSK comes with the following
+## Basic example
+See the Layou
 [basic test case](https://github.com/kriasoft/react-starter-kit/blob/master/src/components/Layout/Layout.test.js)
-you can use as a starting point:
+to use as a starting point:
 
 ```js
 import React from 'react';
@@ -60,39 +57,7 @@ describe('Layout', () => {
 });
 ```
 
-### React-intl exampleß
-
-React-intl users MUST render/wrap components inside an IntlProvider like the
-example below:
-
-The example below example is a drop-in test for the RSK `Header` component:
-
-```js
-import React from 'react';
-import Header from './Header';
-import IntlProvider from 'react-intl';
-import Navigation from '../../components/Navigation';
-
-describe('A test suite for <Header />', () => {
-  it('should contain a <Navigation/> component', () => {
-    it('rendering', () => {
-      const wrapper = renderIntoDocument(
-        <IntlProvider locale="en">
-          <Header />
-        </IntlProvider>,
-      );
-      expect(wrapper.find(Navigation)).to.have.length(1);
-    });
-  });
-});
-```
-
-Please note that NOT using IntlProvider will produce the following error:
-
-> Invariant Violation: [React Intl] Could not find required `intl` object.
-> <IntlProvider> needs to exist in the component ancestry.
-
-### Linting
+## Linting
 
 In order to check if your JavaScript and CSS code follows the suggested style
 guidelines run:
@@ -100,3 +65,11 @@ guidelines run:
 ```bash
 yarn run lint
 ```
+export const metadata = {
+  title: 'Testing',
+  fileName:'testing',
+  imageLink: '',
+  authors: ["Graham Houser"],
+  pubDate: '01-28-2022',
+  desc: 'Guide for testing the app.',
+}
