--- a/src/content/docs/start-here.mdx
+++ b/src/content/docs/start-here.mdx
@@ -1,12 +1,5 @@
-# Project Intro
-Started as a clone of [React Starter Kit](https://github.com/kriasoft/react-starter-kit/tree/master).
-While much of the starter kit is intact, there are a few key modifications:
-- CSS Styling and Isomorphic Style Loader replaced by [Chakra UI](https://chakra-ui.com/)
-- Support for MD files replaced by [MDX](https://mdxjs.com/)
-- Additional components to help with MDX files
-- Additional components to help jump start modern styling (such as a landing page component)
-
 # Getting Started
+Covers requirements and steps to start the app from a `git clone`.
 
 ## Requirements
 - Mac OS X, Windows, or Linux
@@ -14,65 +7,6 @@ While much of the starter kit is intact, there are a few key modifications:
 - [Yarn](https://yarnpkg.com/) package + [Node.js](https://nodejs.org/) v8.16.2 or
   newer
 - Text editor setup for React, JSX, Flow, ESlint
-
-## Directory Layout
-Project Structure
-
-```
-.
-├── /build/                     # The folder for compiled output
-├── /node_modules/              # 3rd-party libraries and utilities
-├── /public/                    # Static files which are copied into the /build/public folder
-├── /src/                       # The source code of the application
-│   ├── /components/            # React components
-│   ├── /content/               # Static content (MDX files)
-│   ├── /data/                  # GraphQL server schema and data models
-│   ├── /routes/                # Page/screen components along with the routing information
-│   ├── /client.js              # Client-side startup script
-│   ├── /config.js              # Global application settings
-│   ├── /server.js              # Server-side startup script
-│   └── ...                     # Other core framework modules
-├── /test/                      # Unit and end-to-end tests
-├── /tools/                     # Build automation scripts and utilities
-│   ├── /lib/                   # Library for utility snippets
-│   ├── /build.js               # Builds the project from source to output (build) folder
-│   ├── /bundle.js              # Bundles the web resources into package(s) through Webpack
-│   ├── /clean.js               # Cleans up the output (build) folder
-│   ├── /copy.js                # Copies static files to output (build) folder
-│   ├── /deploy.js              # Deploys your web application
-│   ├── /postcss.config.js      # Configuration for transforming styles with PostCSS plugins
-│   ├── /render.js              # Renders specified routes to static HTML
-│   ├── /run.js                 # Helper function for running build automation tasks
-│   ├── /runServer.js           # Launches (or restarts) Node.js server
-│   ├── /start.js               # Launches the development web server with "live reload"
-│   └── /webpack.config.js      # Configurations for client-side and server-side bundles
-├── Dockerfile                  # Commands for building a Docker image for production
-├── package.json                # The list of 3rd party libraries and utilities
-└── yarn.lock                   # Fixed versions of all the dependencies
-```
-
-### Notable files
-#### Chankra UI Theme
-File for configuring the theme used by Chankra UI components.
-```
-src/components/Theme.js
-```
-#### Chakra Link
-Custom component, takes a Chakra UI `<LINK>` and adds methods to redirecty internally.
-Should be used instead of `<LINK>` for inter-site links.
-```
-src/components/ChakraLink
-```
-#### Friendly Error
-Should be used as the fallback component when using an Error Boundary.
-```
-src/components/FriendlyError
-```
-#### Server Config
-Used to set defaults for environment variables
-```
-src/config.js
-```
 
 ## Quick Start
 
@@ -125,10 +59,6 @@ $ yarn start --release
 _NOTE: double dashes are required_
 
 This command will run the app in release mode, as it would be seen when fully deployed. The
-
-## Environment Variables
-Overwrite or add additional environment variables by creating a `.env` file in the root directory.
-Varialbes are loaded using [dotenv](https://www.npmjs.com/package/dotenv).
 
 ## Addtional Tasks - Build, Test, Deploy
 
@@ -185,3 +115,12 @@ to
 [Azure Web Apps](https://azure.microsoft.com/en-us/services/app-service/web/),
 or [Heroku](https://www.heroku.com/) this way. Both will execute `yarn install --production` upon receiving new files from you. Note, you should only deploy
 the contents of the `/build` folder to a remote server.
+
+export const metadata = {
+  title: 'Start Here',
+  fileName:'start-here',
+  imageLink: '',
+  authors: ["Graham Houser"],
+  pubDate: '10-01-2021',
+  desc: 'First steps for working in code base.',
+}
