wrote dynamicPageRouting document

--- a/src/content/docs/customizing.mdx
+++ b/src/content/docs/customizing.mdx
@@ -45,7 +45,7 @@ See chakra components for deeper dive.
 ## Content
 Home of all the MDX.
 ### index.js
-Imports all MDX files in subfolders, then exports an object listing its imports.
+Imports all MDX files in sub-folders, then exports an object listing its imports.
 This creates a list of all files in content, a useful tool in creating dynamic routes.
 
 See `Static Content With MDX` for more information.
@@ -88,7 +88,7 @@ src/config.js
 ```
 ### Locally Set
 Overwrite or add additional environment variables by creating a `.env` file in the root directory.
-Varialbes are loaded using [dotenv](https://www.npmjs.com/package/dotenv).
+Variables are loaded using [dotenv](https://www.npmjs.com/package/dotenv).
 
 export const metadata = {
   title: 'Customizing',
