--- a/src/content/docs/startHere.mdx
+++ b/src/content/docs/startHere.mdx
@@ -60,7 +60,7 @@ _NOTE: double dashes are required_
 
 This command will run the app in release mode, as it would be seen when fully deployed. The
 
-## Addtional Tasks - Build, Test, Deploy
+## Additional Tasks - Build, Test, Deploy
 
 If you need just to build the app (without running a dev server), simply run:
 
@@ -118,7 +118,7 @@ the contents of the `/build` folder to a remote server.
 
 export const metadata = {
   title: 'Start Here',
-  fileName:'start-here',
+  fileName:'startHere',
   imageLink: '',
   authors: ["Graham Houser"],
   pubDate: '10-01-2021',
