--- a/src/content/docs/staticContentWithMDX.mdx
+++ b/src/content/docs/staticContentWithMDX.mdx
@@ -89,7 +89,7 @@ export const metadata = {
 ```
 
 # Lazy Loading MDX
-Adding a route for every MDX file is tedious and unnessessary (except if pages need to be rendered fully statically).
+Adding a route for every MDX file is tedious and unnecessary (except if pages need to be rendered fully statically).
 MDX files can be loaded with [loadable-components](https://loadable-components.com/docs/getting-started/)
 
 A generic MDX page could be made like such:
@@ -128,7 +128,7 @@ export default action;
 
 export const metadata = {
   title: 'Static Content With MDX',
-  fileName:'Static-Content-With-MDX',
+  fileName:'staticContentWithMDX',
   imageLink: '',
   authors: ["Graham Houser"],
   pubDate: '10-01-2021',
